--- a/ressourses/css/style.css
+++ b/ressourses/css/style.css
@@ -31,6 +31,10 @@ html{
     margin: 0 auto;
 }
 
+section{
+    padding: 80px 0;
+}
+
 
 /*-----------------------*/
 /*header*/
@@ -50,17 +54,48 @@ header{
     transform: translate(-50% , -50%);
 }
 
-h1{
-    margin-top: 0;
-    margin-bottom:10px;
-    color: #fff;
-    font-size: 250%;
+h1,
+h2{
+
+
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
-    word-spacing: 4px;
+
 
     
+}
+
+h1{
+    margin-top: 0;
+    margin-bottom:20px;
+    word-spacing: 4px;
+    color: #fff;
+    font-size: 250%;
+}
+h2{
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    
+
+}
+
+h2:after{
+    display: block;
+    margin: 0 auto;
+    background-color: #ca752b;
+    height: 2px;
+    width: 100%;
+    content: " ";
+    margin-top: 30px;
+}
+
+.long-text{
+    line-height: 145%;
+    margin-left: 15%;
+    width: 70%;
 }
 
 .logo{
@@ -147,5 +182,10 @@ h1{
     color:#fff;
     border: 1px solid  #ca752b;
 }
+
+
+/*-----------------------*/
+/*section Feashrs*/
+/*-----------------------*/
 
 
