--- a/ressourses/css/style.css
+++ b/ressourses/css/style.css
@@ -55,12 +55,13 @@ header{
 }
 
 h1,
-h2{
+h2,
+h3{
 
 
     font-weight: 300;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    
 
 
     
@@ -72,14 +73,21 @@ h1{
     word-spacing: 4px;
     color: #fff;
     font-size: 250%;
+    letter-spacing: 1px;
 }
 h2{
     font-size: 180%;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
+    letter-spacing: 1px;
     
 
+}
+
+h3{
+    font-size: 110%;
+    margin-bottom: 15px;
 }
 
 h2:after{
@@ -187,5 +195,17 @@ h2:after{
 /*-----------------------*/
 /*section Feashrs*/
 /*-----------------------*/
+
+.box p{
+    font-size: 90%;
+    line-height: 145%;
+}
+
+.big-icon{
+    font-size: 350%;
+    display: block;
+    margin-bottom: 10%;
+    color: #ca752b;
+}
 
 
