--- a/ressourses/css/style.css
+++ b/ressourses/css/style.css
@@ -81,8 +81,6 @@ h2{
     text-align: center;
     margin-bottom: 30px;
     letter-spacing: 1px;
-    
-
 }
 
 h3{
@@ -193,8 +191,12 @@ h2:after{
 
 
 /*-----------------------*/
-/*section Feashrs*/
+/*section Features*/
 /*-----------------------*/
+
+.section-features .long-text{
+    padding-bottom : 30px;
+}
 
 .box p{
     font-size: 90%;
@@ -206,6 +208,47 @@ h2:after{
     display: block;
     margin-bottom: 10%;
     color: #ca752b;
+}
+
+/*-----------------------*/
+/*meals*/
+/*-----------------------*/
+
+
+.section-meals{
+    padding: 0;
+}
+
+.showcase-meal{
+    width: 100%;
+    list-style: none;
+}
+
+.showcase-meal li{
+    display: block;
+    float: left;
+    width:25%;
+}
+
+.meal-photo{
+    width: 100%;
+    margin: 0;
+    background-color: #000;
+    overflow: hidden;
+}
+
+.meal-photo img{
+    opacity: 0.70;
+    width:100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover{
+
+    transform: scale(1.03);
+    opacity: 1;
 }
 
 
